--- a/index.html
+++ b/index.html
@@ -19,14 +19,24 @@
             <h2 class="title">Sign in</h2>
             <div class="input-field">
               <i class="fas fa-user"></i>
-              <input type="text" placeholder="Username" />
+              <input
+                class="username"
+                required
+                type="text"
+                placeholder="Username"
+              />
             </div>
             <div class="input-field">
               <i class="fas fa-lock"></i>
-              <input type="password" placeholder="Password" />
+              <input
+                class="password"
+                required
+                type="password"
+                placeholder="Password"
+              />
             </div>
             <!-- <input type="submit" value="Login" class="btn solid" /> -->
-            <a href="" type="submit" class="btn solid">Login</a>
+            <a href="./products.html" type="submit" class="btn solid">Login</a>
           </form>
           <form action="#" class="sign-up-form">
             <h2 class="title">Sign up</h2>
@@ -47,7 +57,7 @@
               <input type="password" placeholder="Password" />
             </div>
             <!-- <input type="submit" class="btn" value="Sign up" /> -->
-            <a href="" type="submit" class="btn">Sign up</a>
+            <a href="./products.html" type="submit" class="btn">Sign up</a>
           </form>
         </div>
       </div>
