--- a/products.html
+++ b/products.html
@@ -41,10 +41,14 @@
         <h1 class="card-container-heading color">Our Products</h1>
         <div class="button-container">
           <button onclick="filterCards('All')">All Products</button>
-          <button onclick="filterCards('Personal')">Personal Computers</button>
-          <button onclick="filterCards('Desktop')">Desktop Computers</button>
-          <button onclick="filterCards('Phones')">Phones</button>
-          <button onclick="filterCards('Tablets')">Tablets</button>
+          <button onclick="filterCards('PERSONAL COMPUTER')">
+            PERSONAL COMPUTER
+          </button>
+          <button onclick="filterCards('DESKTOP COMPUTER')">
+            DESKTOP COMPUTER
+          </button>
+          <button onclick="filterCards('phone')">phone</button>
+          <button onclick="filterCards('Tablet')">Tablet</button>
         </div>
         <div class="products"></div>
       </div>
