--- a/products.html
+++ b/products.html
@@ -29,8 +29,7 @@
         <ul id="items" class="list-group"></ul>
       </div>
       <div class="calc">
-        <div>TOTAL PRICE</div>
-        <div>R00,00</div>
+        <div>TOTAL PRICE: R00,00</div>
       </div>
       <div class="check">
         <button class="checkout">Check Out</button>
