--- a/products.html
+++ b/products.html
@@ -11,14 +11,18 @@
     <title>Buy your product</title>
   </head>
   <body>
-    <button class="profile"><i class="fas fa-user"></i></button>
+    <button onclick="showList()" class="profile">
+      <i class="fas fa-user"></i>
+    </button>
     <button onclick="showCart()" class="cards">
       <i class="fas fa-shopping-cart"></i>
     </button>
     <section id="profile">
       <div class="prof_link">
         <a href="">Profile Management</a>
-        <a href="">Add products</a>
+        <a href="./addform.html" target="_blank" rel="noopener noreferrer"
+          >Add products</a
+        >
         <a href="">Edit product</a>
         <a href="">Remove product</a>
       </div>
