--- a/addform.html
+++ b/addform.html
@@ -30,7 +30,7 @@
           name="price"
           required
           placeholder="number only"
-          id="email"
+          id="price"
           class="input_info"
         />
       </div>
@@ -42,7 +42,7 @@
           type="text"
           name="type"
           placeholder="edit Type here"
-          id="massage"
+          id="type"
           class="input_info"
         />
       </div>
@@ -54,7 +54,7 @@
           name="number"
           required
           placeholder="describe product"
-          id="number"
+          id="description"
           class="input_info"
         />
       </div>
@@ -65,14 +65,14 @@
           type="text"
           name="image"
           placeholder="edit image link here"
-          id="massage"
+          id="image"
           class="input_info"
         />
       </div>
       <!--send button-->
 
       <div class="contuct_info">
-        <button onclick="createNewProuct()" class="butt_link">Send</button>
+        <button class="butt_link">Send</button>
       </div>
     </form>
     <script src="/JS/form.js"></script>
